# restclient

./: .gitignore  CHANGELOG.md  CLEANUP_REPORT.md  Cargo.toml  LICENSE  PROJECT_STRUCTURE.md  README.md  extension.toml  install_to_zed.sh  test.http
.github/workflows/: ci.yml
.http-client/: README.md  environments.example.json  environments.json
docs/: .gitkeep  ANIMATED_GUIDE.md  CONTRIBUTING.md  CURSOR_BASED.md  RECORDING_GUIDE.sh  SETUP.md  USAGE_GUIDE.md  logo-design-philosophy.md
docs/plans/: 2026-03-07-variable-substitution-design.md  2026-03-07-variable-substitution.md
examples/: basic.http  edge-cases.http  environments.rest  http-client.env.json  response-capture.http  variables.http
grammars/: http.wasm
languages/http/: config.toml  highlights.scm  runnables.scm  tasks.json
lsp/: Cargo.toml
lsp/src/: completions.rs  lib.rs  main.rs  parser.rs  response_handler.rs  variables.rs
src/: lib.rs  parser.rs  variables.rs
src/future/: README.md  executor.rs  file_loader.rs  formatter.rs  handler.rs  history.rs  lsp.rs  response.rs  simple_executor.rs
