[workspace]
members = ["."]
exclude = ["lsp"]
resolver = "2"

[package]
name = "zed-restclient"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
zed_extension_api = "0.7.0"
serde_json = "1.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
