[workspace]

[package]
name = "http-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "http-lsp"
path = "src/main.rs"

[[bin]]
name = "http-client"
path = "src/bin/http-client.rs"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
reqwest = { version = "0.12", features = ["blocking"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
